Minor alignment fix for h2

--- a/css/default.css
+++ b/css/default.css
@@ -37,7 +37,6 @@ h1 {
 h2 {
     color: #008;
     font-size: 18px;
-    text-align: center;
 }
 
 h3 {
